[package]
name = "metrics64"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "2.0.1"
libc = "0.2.164"
opentelemetry-proto = { version = "0.27.0", default-features = false, features = [
    "gen-tonic",
    "metrics",
] }
opentelemetry-semantic-conventions = "0.27.0"
parking_lot = "0.12.3"
smallvec = "1.13.2"
tokio = { version = "1.41.1", features = ["time"] }
tonic = "0.12.2"
tracing = "0.1.40"
gethostname = "0.5.0"
uuid = { version = "1.11.0", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.93"
criterion = "0.5"
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
tokio = { version = "1.41.1", features = ["full"] }
tracing-subscriber = "0.3.18"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "test-otel"
