[package]
name = "metrics64"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
twox-hash = "2.0.1"
opentelemetry-proto = { version = "0.29.0", default-features = false, features = [
    "gen-tonic",
    "metrics",
] }
opentelemetry-semantic-conventions = "0.29.0"
parking_lot = "0.12.3"
smallvec = "1.14.0"
tokio = { version = "1.44", features = ["time"] }
tonic = "0.12.2"
tracing = "0.1.40"
gethostname = "1.0.0"
uuid = { version = "1.15.1", features = ["v4"] }

[dev-dependencies]
anyhow = "1.0.96"
criterion = "0.5"
tokio = { version = "1.43", features = ["full"] }
pprof = { version = "0.14", features = ["flamegraph", "criterion"] }
tracing-subscriber = "0.3.18"

[[bench]]
name = "benchmark"
harness = false

[[example]]
name = "test-otel"
